// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test should match snapshot 1`] = `
<div>
  <div>
    Route
    
  </div>
</div>
`;

exports[`Test should match snapshot 2`] = `
<div>
  <div>
    Route
    
  </div>
</div>
`;

exports[`Test should match snapshot 3`] = `
<div>
  <div>
    
    Foobar2
  </div>
</div>
`;
